--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,6 +1,7 @@
 .portfolio {
     margin: 20px;
     margin-left: 20%;
+    margin-right: 0px;
     width: 60%;
     display: flex;
     justify-content: space-around;
@@ -10,5 +11,13 @@
 @media only screen and (max-width: 800px) {
     .portfolio {
         margin-left: 0px;
+        justify-content: center;
+        width: fit-content;
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    .portfolio {
+        width: 100%;
     }
 }
