--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -33,6 +33,7 @@
     width: 500px;
     position: absolute;
     display: block;
+    min-width: 282px;
 }
 
 .project > img {
@@ -74,6 +75,17 @@
 }
 
 @media only screen and (max-width: 500px) {
+    .projectDiv, .layer, .project > img, .projectLink, .project{
+        width: 350px;
+        height: 175px;
+    }
+
+    .text {
+        top: 20px
+    }
+}
+
+@media only screen and (max-width: 350px) {
     .projectDiv, .layer, .project > img, .projectLink {
         width: 100%;
         height: 175px;
@@ -82,10 +94,6 @@
     .project {
         width: 94%;
         height: 175px;
-        margin-left: 3%
-    }
-
-    .text {
-        top: 20px
+        margin-left: 3%;
     }
 }
