--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -3,3 +3,9 @@
     margin-left: 100px;
     font-size: 20px;
 }
+
+@media only screen and (max-width: 470px) {
+    .resume {
+        margin-left: 2%;
+    }
+}
