Changed the pages' colors

--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -64,6 +64,10 @@
     cursor: pointer;
 }
 
+.layer:hover {
+    cursor: pointer;
+}
+
 @keyframes fadeIn {
     0% {background-color: #ffffff00;}
     100% {background-color: #ffffff96;}
