--- a/src/components/aboutme/about.css
+++ b/src/components/aboutme/about.css
@@ -7,10 +7,13 @@
 
 .aboutme h2 {
     font-size: 30px;
+    font-weight: normal;
+    color: #ffffffc4;
 }
 
 .aboutme p {
     font-size: 18px;
+    color: #ffffffc4;
 }
 
 @media only screen and (max-width: 900px) {
