--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -10,7 +10,7 @@
     width: 300px;
     margin-top: 20px;
     padding-top: 20px;
-    background-color: #050507c4;
+    background-color: #ffffff96;
     height: fit-content;
 }
 
@@ -18,6 +18,8 @@
     width: 90%;
     display: block;
     margin: 5%;
+    color: #ffffffc4;
+    background-color: #222026;
 }
 
 .contact textarea {
@@ -32,4 +34,8 @@
 .contact button {
     width: 100px;
     margin: 5%;
+    color: #ffffffc4;
+    background-color: #222026;
+    border-radius: 5px;
+    width: 90%;
 }
