--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #050507c4;
-    height: 15%;
+    background-color: #18171a;
+    height: fit-content;
     width: 100%;
     padding-top: 0px;
     padding-left: 0px;
@@ -15,9 +15,11 @@
     padding-left: 26px;
     padding-right: 5px;
     padding-bottom: 2px;
-    background-color: #a7ffffbb;
+    background-color: #004949;
+    color: white;
     width: fit-content;
     text-align: right;
+    font-weight: normal;
 }
 
 .navbar > div {
