--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -16,7 +16,7 @@
     padding-right: 5px;
     padding-bottom: 2px;
     background-color: #004949;
-    color: white;
+    color: #ffffffc4;
     width: fit-content;
     text-align: right;
     font-weight: normal;
