--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -1,7 +1,7 @@
 .projectDiv {
     margin-top: 20px;
     width: 500px;
-    height: 250px;
+    height: 460px;
 }
 
 .projectLink {
@@ -68,6 +68,15 @@
     cursor: pointer;
 }
 
+.description {
+    position: relative;
+    height: fit-content;
+    color: #004949;
+    background: #ffffffc4;
+    font-size: 20px;
+    padding: 10px;
+}
+
 @keyframes fadeIn {
     0% {background-color: #ffffff00;}
     100% {background-color: #ffffffda;}
@@ -79,20 +88,33 @@
 }
 
 @media only screen and (max-width: 500px) {
-    .projectDiv, .layer, .project > img, .projectLink, .project{
+    .layer, .project > img, .projectLink, .project{
         width: 350px;
         height: 175px;
+    }
+
+    .projectDiv {
+        width: 350px;
+        height: 365px;
     }
 
     .text {
         top: 20px
     }
+
+    .description {
+        font-size: 15px;
+    }
 }
 
 @media only screen and (max-width: 350px) {
-    .projectDiv, .layer, .project > img, .projectLink {
+    .layer, .project > img, .projectLink {
         width: 100%;
         height: 175px;
+    }
+
+    .projectDiv {
+        width: 100%;
     }
 
     .project {
@@ -103,5 +125,10 @@
 
     .text h2 {
         font-size: 28px;
+    }
+
+    .description {
+        width: 100%;
+        font-size: 14px;
     }
 }
